--- a/src/components/datasets/datasetDeatail/datasetDetail.css
+++ b/src/components/datasets/datasetDeatail/datasetDetail.css
@@ -3,3 +3,12 @@
         margin: 0;
     }
 }
+.table {
+    
+    background: var(--surface-card);
+    padding:  0.5rem;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+    
+}
+
